--- a/Project.toml
+++ b/Project.toml
@@ -7,12 +7,14 @@ version = "0.1.0"
 LogarithmicNumbers = "aa2f6b4e-9042-5d33-9679-40d3a6b85899"
 NiLang = "ab4ef3a6-0b42-11ea-31f6-e34652774712"
 TropicalNumbers = "b3a74e9c-7526-4576-a4eb-79c0d4c32334"
+TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 
 [compat]
 julia = "1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [targets]
-test = ["Test"]
+test = ["Test", "ForwardDiff"]
