--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
-name = "NiLog"
-uuid = "07b9913f-4636-4bc8-9841-9af50769c5b0"
+name = "NiLogLikeNumbers"
+uuid = "cde04368-e8ed-407b-9165-3f23f10e571c"
 authors = ["GiggleLiu"]
 version = "0.1.0"
 
